[package]
name = "config_converter"
version = "0.1.0"
authors = ["exyrias <25100303+exyrias@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
clap = "2.33"

