[package]
name = "config_converter"
version = "0.2.0"
authors = ["exyrias <25100303+exyrias@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Converts configuration files between different formats."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8.19"
clap = { version = "4.5.27", features = ["derive"] }

